--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.1
 
+#flutter_native_splash:
+#color: "#FFFFFF"
+#image: "\assets\logo.png"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
