--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.1
+  firebase_core: ^2.25.4
 
 #flutter_native_splash:
 #color: "#FFFFFF"
