--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.1
   firebase_core: ^2.25.4
+  cloud_firestore: ^4.15.8
 
 #flutter_native_splash:
 #color: "#FFFFFF"
