--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_native_splash: ^2.3.1
   firebase_core: ^2.25.4
   cloud_firestore: ^4.15.8
+  firebase_database: ^10.4.9
   fl_chart: ^0.66.2
 
 flutter_native_splash:
