--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.15.8
   firebase_database: ^10.4.9
   fl_chart: ^0.66.2
+  curved_navigation_bar: ^1.0.3
 
 flutter_native_splash:
   color: "#FFFFFF"
