--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
   - assets/(bg)Login.png
   - assets/(bg)Register.png
   - assets/(bg)SplashScreen.png
+  - assets/AQI.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
