--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.1
+  firebase_auth: ^4.17.8
   firebase_core: ^2.25.4
   cloud_firestore: ^4.15.8
   firebase_database: ^10.4.9
   fl_chart: ^0.66.2
   curved_navigation_bar: ^1.0.3
+  syncfusion_flutter_charts: ^20.2.48
 
 flutter_native_splash:
   color: "#FFFFFF"
