--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,13 @@ dependencies:
   fl_chart: ^0.66.2
   curved_navigation_bar: ^1.0.3
   syncfusion_flutter_charts: ^20.2.48
+  oscilloscope: ^0.2.0
+  provider: ^6.0.1
 
 flutter_native_splash:
   color: "#FFFFFF"
   image: 'assets\(bg)SplashScreen.png'
+  
 
 dev_dependencies:
   flutter_test:
